public interface Observer {
	public void update();
}